--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="AI Engineer" />
+    <meta name="keywords" content="AI Engineer, Keshava Rajavaram, AI Engineer Portfolio" />
+    <meta property="og:image" content="URL of the image you want to display" />
     <link id="theme-icon" rel="icon" type="image/png" href="/light.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keshava Rajavaram</title>
